--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
 
     
     <div class="mostrar_ingreso">
-        <span class="span_mostrar">Usuario: </span><span id="usuario_mostrar"></span>
+        <span class="span_mostrar">Su usuario es: </span><span id="usuario_mostrar"></span>
         <br>
-        <br>
-        <span class="span_mostrar">Contraseña: </span><span id="password_mostrar"></span>
     </div>
-    <script src="script/hammer.js"></script>
     <script src="script/index.js"></script>
     
 </body>
