--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="section-principal">
             <form action="">
 
-                <h1 class="text-login">Login</h1>
+                <h1 class="text-login">Login al sistema</h1>
 
                 <label for="usuario">Usuario</label>
 
